frontend/test/should_pass/deque_004.grg
using deque_model_001;

rule anonymousDeque {
	a:A -e:E-> a;
	
	if { 
		a.val in deque<int>] 1, 3, 5, 7, 11, 13, 17 [
		|| e.strval in deque<string>] "foo", "bar", "blubb" [
		&& a.val in deque<int>] 2, 4, a.val, 19 [
		&& e.strval in deque<string>] "bar", e.strval, "blubb" [;
	}
		
	if { 
		a.spiceDeque.peek(0)!=42
		&& a.spiceDeque.size()!=42;
	}
	
	modify {
		eval {
			a.val = a.val in deque<int>] 2, 4, a.val, 19 [ ? a.val : 42;
			e.strval = e.strval in deque<string>] "bar", e.strval, "blubb" [ ? e.strval : 42;
		}
				
		eval { 
			a.val = a.spiceDeque.peek(0); 
			a.val = a.spiceDeque.size();
		}
	}
}
