frontend/test/should_fail/array_prod_exec.grg
using array_model_001b;

test ti(var x:int, var y:int)
{
}

rule prod {
	a:A;

	modify {
	---
		exec(ti(array<string>["1","2"].prod(), a.niceArray.prod()));
	}
}
